// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Card Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ ceEQCj sc-jNMdTA eIbWGx"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ iTdmGI sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card Small 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ kyJVgU sc-jNMdTA eIbWGx"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ iTdmGI sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card With Actions 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ ceEQCj sc-jNMdTA jNzIec"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC cFuckZ sc-iBPRYJ dWRxlP sc-hHftDr kUtBaJ"
          >
            <h3
              class="sc-gWHgXt eCVPSB sc-bZSQDF QBWsK"
            >
              Card with Actions
            </h3>
            <button
              class="StyledButton-sc-323bzc-0 fVClA-D sc-bqyKva sc-bkzZxe gjQfnS dvvpJt sc-dIUggk YDvpG"
              type="button"
            >
              Update
            </button>
          </div>
          <hr
            class="sc-iktFzd cJCAjm sc-hiSbYr gLVHRe"
          />
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ iTdmGI sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris 
          </div>
          <div
            class="sc-gKsewC cFuckZ sc-iBPRYJ dWRxlP sc-hHftDr gjyXnv"
          >
            <button
              class="StyledButton-sc-323bzc-0 fGJlAh sc-bqyKva sc-kstrdz gjQfnS FUwNf sc-dIUggk deFJvX"
              type="button"
            >
              Normal action
            </button>
            <button
              class="StyledButton-sc-323bzc-0 bxeVfd sc-bqyKva sc-kstrdz gjQfnS ekgxxv sc-dIUggk fiTZeL"
              type="button"
            >
              Danger action
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card With Header 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ ceEQCj sc-jNMdTA eIbWGx"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC cFuckZ sc-iBPRYJ dWRxlP sc-hHftDr kUtBaJ"
          >
            <h3
              class="sc-gWHgXt eCVPSB sc-bZSQDF QBWsK"
            >
              Card with Button
            </h3>
            <button
              class="StyledButton-sc-323bzc-0 fVClA-D sc-bqyKva sc-bkzZxe gjQfnS dvvpJt sc-dIUggk YDvpG"
              type="button"
            >
              Update
            </button>
          </div>
          <hr
            class="sc-iktFzd cJCAjm sc-hiSbYr gLVHRe"
          />
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ iTdmGI sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card With Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ ceEQCj sc-jNMdTA eIbWGx"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC cFuckZ sc-iBPRYJ dWRxlP sc-hHftDr kUtBaJ"
          >
            <h3
              class="sc-gWHgXt eCVPSB sc-bZSQDF QBWsK"
            >
              Card with Button
            </h3>
            <a
              class="sc-eGCarw kBARfK sc-ctaXAZ bvFpzE"
              color="primary.main"
              href="https://balena.io"
            >
              Link
            </a>
          </div>
          <hr
            class="sc-iktFzd cJCAjm sc-hiSbYr gLVHRe"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card Without Divider 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ ceEQCj sc-jNMdTA jNzIec"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC cFuckZ sc-iBPRYJ dWRxlP sc-hHftDr kUtBaJ"
          >
            <h3
              class="sc-gWHgXt eCVPSB sc-bZSQDF QBWsK"
            >
              Card with Actions
            </h3>
            <button
              class="StyledButton-sc-323bzc-0 fVClA-D sc-bqyKva sc-bkzZxe gjQfnS dvvpJt sc-dIUggk YDvpG"
              type="button"
            >
              Update
            </button>
          </div>
          <hr
            class="sc-iktFzd fsVFdB sc-hiSbYr fOJBek"
            color="transparent"
          />
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ iTdmGI sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris 
          </div>
          <div
            class="sc-gKsewC cFuckZ sc-iBPRYJ dWRxlP sc-hHftDr gjyXnv"
          >
            <button
              class="StyledButton-sc-323bzc-0 fGJlAh sc-bqyKva sc-kstrdz gjQfnS FUwNf sc-dIUggk deFJvX"
              type="button"
            >
              Normal action
            </button>
            <button
              class="StyledButton-sc-323bzc-0 bxeVfd sc-bqyKva sc-kstrdz gjQfnS ekgxxv sc-dIUggk fiTZeL"
              type="button"
            >
              Danger action
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
